# gl3-space-battle

./: CMakeLists.txt  vcpkg.json
game/: CMakeLists.txt
game/src/: Entity.cpp  Entity.h  Game.cpp  Game.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Ship.cpp  Ship.h  main.cpp
